# 2SecKeyServer

./: CMakeLists.txt  ServerOperation.cpp  ServerOperation.h  main.cpp
public_class/: ClientOperation.cpp  SecKeyShm.cpp  SecKeyShm.h
